# EasyCore

./: .buildinfo  .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README.rst  blah.py  classes.dot  genindex.html  index.html  objects.inv  packages.dot  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  sg_execution_times.html  test.cif  test.ipynb  test.py  test_scipp.py
.doctrees/: index.doctree  sg_execution_times.doctree
.doctrees/auto_examples/: index.doctree
.doctrees/auto_examples/fitting/: plot_constraints.doctree  sg_execution_times.doctree
.doctrees/base_examples/: index.doctree  plot_baseclass1.doctree  sg_execution_times.doctree
.doctrees/fitting/: constraints.doctree  introduction.doctree
.doctrees/fitting_examples/: index.doctree  plot_constraints.doctree  sg_execution_times.doctree
.doctrees/getting-started/: installation.doctree  overview.doctree
.doctrees/reference/: base.doctree  index.doctree
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: annotate_pull_requests.yml  ci_pip.yaml  codeql-analysis.yml  documentation-build.yml  documentation_build.yml  ossar-analysis.yml  python-ci.yml  python-package.yml  python-publish.yml  release-drafter-verify-pr-labels.yml  release-drafter.yml  release_drafter.yml  self_publish_alpha.yml  uml.yml
Base/Objects/: Base.py  Borg.py
Diagrams/: classes_easyCore.dot  packages_easyCore.dot
Examples/: README.rst  dimer_example.ipynb  example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  example_dataset.py  example_dataset2.py  example_dataset2pt2.py  example_dataset3.py  example_dataset3pt2.py  example_dataset4.py  example_dataset4_2.py
Examples/base/: README.rst  plot_baseclass1.py
Examples/datasets/: README.rst  plot_datasets1.py  plot_datasets2.py
Examples/fitting/: README.rst  plot_constraints.py
_downloads/19d97d4ef0598c7f65692ad9583b7bb5/: plot_baseclass1.py
_downloads/56625970f94ba0f1ffe83a76b414126d/: plot_constraints.py
_downloads/68568b8dfe38a7d7c27bfb3470355c62/: plot_constraints.ipynb
_downloads/6a6b6cc0797aa8aa52df4ee0f0441cd7/: plot_constraints.py
_downloads/725462c328f31b1ee5818cf720bab017/: plot_constraints.ipynb
_downloads/e39fe122f61f743f7d0da368dbc3ff7d/: plot_baseclass1.ipynb
_modules/: index.html
_modules/collections/: abc.html
_modules/easyCore/Datasets/: xarray.html
_modules/easyCore/Fitting/: Constraints.html
_modules/easyCore/Objects/: Base.html  Groups.html  ObjectClasses.html  Variable.html  core.html
_modules/easyCore/Utils/: json.html
_sources/: index.rst.txt  sg_execution_times.rst.txt
_sources/auto_examples/: index.rst.txt
_sources/auto_examples/fitting/: plot_constraints.rst.txt  sg_execution_times.rst.txt
_sources/base_examples/: index.rst.txt  plot_baseclass1.rst.txt  sg_execution_times.rst.txt
_sources/fitting/: constraints.rst.txt
_sources/fitting_examples/: index.rst.txt  plot_constraints.rst.txt  sg_execution_times.rst.txt
auto_examples/: index.html
auto_examples/fitting/: plot_constraints.html  sg_execution_times.html
base_examples/: index.html  plot_baseclass1.html  sg_execution_times.html
docs/src/: conf.py  index.rst  requirements.txt
docs/src/fitting/: constraints.rst  introduction.rst
docs/src/getting-started/: installation.rst  overview.rst
docs/src/reference/: base.rst
easyCore/: REDIRECT.py  __init__.py
easyCore/BayesianAnalysis/: Likelihoods.py  Models.py  ParameterDistribution.py  __init__.py
easyCore/Datasets/: Dataset.py  extensions.py  neutron.py  scipp.py  xarray.py
easyCore/Datasets/extensions/: scipp_accessors.py
easyCore/Elements/: Atom.py  Cell.py  peridic_table.py  periodic_table.json  periodic_table.py
easyCore/Elements/Basic/: Anisotropy.py  AtomicDisplacement.py  Cell.py  Lattice.py  Site.py  SpaceGroup.py  Specie.py  Susceptibility.py  Twin.py
easyCore/Elements/HigerLevel/: Crystal.py
easyCore/Elements/HigherLevel/: Crystal.py  Phase.py  Structure.py  __init__.py
easyCore/Examples/: example2.py  example3.py  example4.py
easyCore/Fitting/: Constraints.py  DFO_LS.py  FitCallable.py  Fitting.py  __init__.py  bumps.py  fittingTemplate.py  fitting_template.py  lmfit.py
easyCore/Objects/: Base.py  Borg.py  DataClass.py  Graph.py  Groups.py  Inferface.py  ObjectClasses.py  Variable.py  VariableClasses.py  Virtual.py  __init__.py  core.py  variables.py  virtual.py
easyCore/Objects/Job/: Analysis.py  Experiment.py  Job.py  Theory.py
easyCore/Objects/jax/: ObjectClasses.py  Variable.py
easyCore/Symmetry/: Bonding.py  SymOp.py  groups.py  symm_data.json  symm_ops.json  tools.py
easyCore/Utils/: Exceptions.py  Logging.py  UndoRedo.py  classTools.py  classUtils.py  decorators.py  json.py  string.py  typing.py
easyCore/Utils/Hugger/: Hugger.py  Property.py
easyCore/Utils/io/: CIF.py  CIF_HEADERS.py  cif.py  dict.py  (+4 more)
easyCore/models/: __init__.py  distributions.py  interpolation.py  polynomial.py
easyCore/optimization/: _model.py  fitting.py  model.py  models.py  objective.py  tools.py
examples_old/: dimer_example.ipynb  example1.py  example1_dream.py  example2.py  example3.py  example4.py  example5.py  example5_broken.py  example6_broken.py  example_dataset.py  example_dataset2.py  example_dataset2pt2.py  example_dataset2pt2_broken.py  example_dataset3.py  example_dataset3pt2.py  example_dataset4.py  example_dataset4_2.py  example_dataset5.py  example_dataset_fitting.py  example_scipp_dataset1.py  jax_examaples3.py  jax_examaples4.py  jax_examples.py  jax_examples2.py
fitting/: constraints.html  introduction.html
fitting_examples/: index.html  plot_constraints.html  sg_execution_times.html
getting-started/: installation.html  overview.html
reference/: base.html  index.html
resources/scripts/: generate_html.py
tests/: __init__.py  coord_cython.c  coord_cython.pyx  coords.py  example1.py  example3.py  example4.py
tests/Objects/: test+BaseObj.py  test_Base.py
tests/integration_tests/: __init__.py  test_undoRedo.py
tests/unit_tests/: test_models.py
(+41 files in other folders)
