[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "easysciencecore"
version = "0.3.1"
description = "Generic logic for easyScience libraries"
license = "BSD-3-Clause"
authors = ["Simon Ward"]
readme = "README.md"
homepage = "https://github.com/easyScience/easyCore"
documentation = "https://github.com/easyScience/easyCore"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",  # Define that your audience are developers
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",  # Again, pick a license
    "Programming Language :: Python :: 3 :: Only",
]
packages = [ { include = "easyCore" } ]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.21"
pint = ">=0.17,<0.19"
uncertainties = "^3.1"
lmfit = "^1.0"
bumps = ">=0.8,<0.10"
asteval = "^0.9.27"
DFO-LS = {version = "^1.2", optional = true}
xarray = ">=0.16,<2023.2"
pytest = {version = "^7.0.0", optional = true}
pytest-cov = {version = "^3.0.0", optional = true}
codecov = {version = "^2.1.11", optional = true}
flake8 = {version = "^5.0", optional = true}
tox-gh-actions = {version = "^2.11", optional = true}
doc8 = {version = "^0.11.0", optional = true}
readme-renderer = {version = ">=35,<38", optional = true}
Sphinx = {version = ">=4.0.2,<7.0.0", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}
sphinx-autodoc-typehints = {version = "^1.12.0", optional = true}
sphinx-gallery = {version = ">=0.10,<0.12", optional = true}

[tool.poetry.extras]
graphics = ['holoviews']
full = ['DFO-LS', 'holoviews']
test = ['DFO-LS', 'pytest', 'pytest-cov', 'codecov', 'flake8']
docs = ['doc8', 'readme-renderer', 'Sphinx', 'sphinx-rtd-theme', 'sphinx-autodoc-typehints', 'sphinx-gallery']
ci = ['DFO-LS', 'pytest', 'pytest-cov', 'codecov', 'flake8', 'tox-gh-actions']

[tool.github.info]
organization = 'easyScience'
repo = 'easyCore'

[tool.coverage.run]
source = ['easyCore']

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py{38,39,310,311}
[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
[gh-actions:env]
PLATFORM =
    ubuntu-latest: linux
    macos-latest: macos
    windows-latest: windows
[testenv]
passenv =
    CI
    GITHUB_ACTIONS
    GITHUB_ACTION
    GITHUB_REF
    GITHUB_REPOSITORY
    GITHUB_HEAD_REF
    GITHUB_RUN_ID
    GITHUB_SHA
    COVERAGE_FILE
deps = coverage
whitelist_externals = poetry
commands =
    pip install '.[ci]'
    pytest --cov --cov-report=xml
"""
